tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/item57-weak-import.wyst
module corpus.item57_bad

import weak symbol "optional_hook" as optional_hook: extern "C" fn()
